--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "boostrap": "^2.0.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
